project(super_instructions_library)


# Quantum Methods
set(QM_SOURCE_FILES
    qm/aoladder_contraction.F;
    qm/int_gen_parms.hf;
    qm/sip_interface.hf;
    qm/check_dconf.F;
    qm/imemory.h;
    qm/set_flags2.f;
    qm/instructions_for_testing.f;
    qm/drop_core_in_sip.F;
    qm/excited/cis_unit_guess.F;
    qm/scf/a4_david_damp_factor.F;
    qm/scf/a4_get_init_occupation.F;
    qm/scf/a4_return_occupation.F;
    qm/scf/a4_scf_atom.F;
    qm/scf/a4_dscale.F;
    qm/qm-generic/set_ijk_aaa.F;
    qm/qm-generic/set_ijk_aab.F;
    qm/qm-generic/energy_ty_denominator_rhf.F;
    qm/qm-generic/energy_denominator_rhf.F;
    qm/qm-generic/energy_numerator_rhf.F;
    qm/utility/form_diagonal_unit_matrix.F;
    qm/utility/return_diagonal.F;
    qm/utility/print_block_and_index.F;
    qm/utility/inverse_lu_decomposition.F;
    qm/utility/lu_decomposition.F;
    qm/utility/return_diagonal_elements.F;
    qm/utility/anti_symm_o.F;
    qm/utility/anti_symm_v.F;
    qm/utility/invert_diagonal.F;
    qm/utility/invert_diagonal_asym.F;
    qm/utility/eigen_calc.F;
    qm/utility/eigen_calc_sqr_inv.F;
    qm/utility/gen_eigen_calc.F;
    qm/utility/form_R.F ;
    qm/utility/stripi.F;
    qm/utility/compute_diis.F;
    qm/utility/return_sval.F;
    qm/utility/remove_diagonal_elements.F;
    qm/mcpt-fragment/set_frag.F;
    qm/mcpt-fragment/scf_atom_lowmem.F;
    qm/mcpt-fragment/compute_int_scratchmem_lowmem.F;
    qm/mcpt-fragment/compute_xyz_batch.F;
    qm/mcpt-fragment/frag_index_range.F;
    qm/mcpt-fragment/place_scratch.F;
    qm/mcpt-fragment/compute_return_h1_frag.F;
    qm/mcpt-fragment/return_pairs.F;
    qm/mcpt-fragment/compute_pair_nn.F;
    qm/mcpt-fragment/return_vpq.F;
    qm/mcpt-fragment/compute_moi_nn_repulsion.F;
    qm/mcpt-fragment/compute_h1_moi.F;
    qm/mcpt-fragment/compute_ovl_moi.F;
    qm/direct_integral/uintegrals.F;
    qm/direct_integral/move_integrals.f;
    qm/direct_integral/pack_coeffs.f;
    qm/direct_integral/lookup_shell.f;
    qm/direct_integral/pack_coeffs_oed.f;
    qm/direct_integral/compute_return_h1.F;
    qm/direct_integral/compute_return_ovl.F;
    qm/direct_integral/return_h1.F;
    qm/direct_integral/return_ovl.F;
    qm/direct_integral/compute_int_scratchmem.F;
    qm/direct_integral/compute_nn_repulsion.F;
    qm/direct_integral/compute_aabb_batch.F;
    qm/direct_integral/compute_integral_batch.F;
    qm/direct_integral/compute_dipole_integrals.F;
    qm/direct_integral/erd_scratch_mem_calc.F;
    qm/direct_integral/compute_ubatch1.F;
    qm/direct_integral/compute_ubatch2.F;
    qm/direct_integral/compute_ubatch3.F;
    qm/direct_integral/compute_ubatch4.F;
    qm/direct_integral/compute_ubatch6.F;
    qm/direct_integral/compute_ubatch7.F;
    qm/direct_integral/compute_ubatch8.F;
    qm/direct_integral/compute_uintegrals1.F;
    qm/direct_integral/compute_uintegrals2.F;
    qm/direct_integral/compute_uintegrals3.F;
    qm/direct_integral/compute_uintegrals4.F;
    qm/direct_integral/compute_uintegrals6.F;
    qm/direct_integral/compute_uintegrals7.F;
    qm/direct_integral/compute_uintegrals8.F;
    qm/direct_integral/return_1el_ecp_ints.F;
    qm/direct_integral/compute_return_1el_ecp_ints.F;
    qm/direct_integral/return_1el_ecp_grdints.F;
    qm/direct_integral/compute_return_1el_ecp_grdints.F;
    qm/erd/erd__ctr_tu_expand.f;
    qm/erd/erd__ctr_4index_reorder.f;
    qm/erd/erd__spherical_transform.f;
    qm/erd/erd__rys_2_roots_weights.f;
    qm/erd/erd__memory_eri_derv_batch.f;
    qm/erd/erd__derv_int2d_to_abc0.f;
    qm/erd/erd__ssss_pcgto_block.f;
    qm/erd/erd__memory_hrr_correction.f;
    qm/erd/erd__derv_def_blocks.f;
    qm/erd/erd__1111_def_blocks.f;
    qm/erd/erd__ctr_1st_half.f;
    qm/erd/erd__sspp_pcgto_block.f;
    qm/erd/erd__memory_derv_csgto.f;
    qm/erd/erd__rys_3_roots_weights.f;
    qm/erd/erd__2d_atom_pq_integrals.f;
    qm/erd/erd__2d_derv_pcd_integrals.f;
    qm/erd/erd__derv_int2d_to_ab00.f;
    qm/erd/erd__e0f0_pcgto_block.f;
    qm/erd/erd__rys_x_roots_weights.f;
    qm/erd/erd__atom_int2d_to_e000.f;
    qm/erd/erd__2d_derv_abcd_integrals.f;
    qm/erd/erd__set_derv_sequence.f;
    qm/erd/erd__xyz_to_ry_matrix.f;
    qm/erd/erd__ctr_rs_expand.f;
    qm/erd/erd__prepare_ctr.F;
    qm/erd/erd__jacobi.inc;
    qm/erd/erd__sppp_pcgto_block.f;
    qm/erd/erd__2d_coefficients.f;
    qm/erd/erd__memory_csgto.f;
    qm/erd/erd__normalize_cartesian.f;
    qm/erd/erd__set_derv_abcd.f;
    qm/erd/erd__derv_csgto.f;
    qm/erd/erd__gener_eri_derv_batch.f;
    qm/erd/erd__pppp_pcgto_block.f;
    qm/erd/erd__derv_int2d_to_abcd.f;
    qm/erd/erd__print_batch.f;
    qm/erd/erd__2d_abcd_integrals.f;
    qm/erd/erd__atom_int2d_to_e0f0.f;
    qm/erd/erd__rys_1_roots_weights.f;
    qm/erd/erd__ctr_2nd_half_update.f;
    qm/erd/erd__hrr_matrix.f;
    qm/erd/erd__int2d_to_e000.f;
    qm/erd/erd__memory_1111_csgto.f;
    qm/erd/erd__2d_pcd_integrals.f;
    qm/erd/erd__e0f0_def_blocks.f;
    qm/erd/erd__2d_pq_integrals.f;
    qm/erd/erd__derv_int2d_to_e000.f;
    qm/erd/erd__sssp_pcgto_block.f;
    qm/erd/erd__ftable.inc;
    qm/erd/erd__cartesian_norms.f;
    qm/erd/erd__hrr_transform.f;
    qm/erd/erd__gener_eri_batch.f;
    qm/erd/erd__derv_int2d_to_a000.f;
    qm/erd/erd__ctr_4index_block.f;
    qm/erd/erd__ctr_2nd_half_new.f;
    qm/erd/erd__hrr_step.f;
    qm/erd/erd__transpose_batch.f;
    qm/erd/erd__tuning.inc;
    qm/erd/erd__derv_int2d_to_e0cd.f;
    qm/erd/erd__int2d_to_e0f0.f;
    qm/erd/erd__map_ijkl_to_ikjl.f;
    qm/erd/erd__derv_pcgto_block.f;
    qm/erd/erd__rys_5_roots_weights.f;
    qm/erd/erd__memory_eri_batch.f;
    qm/erd/erd__derv_int2d_to_0000.f;
    qm/erd/erd__csgto.f;
    qm/erd/erd__set_ij_kl_pairs.f;
    qm/erd/erd__derv_int2d_to_e0c0.f;
    qm/erd/erd__xyz_to_ry_abcd.f;
    qm/erd/erd__dsqmin_line_segments.f;
    qm/erd/erd__rys_4_roots_weights.f;
    qm/erd/erd__rys_roots_weights.f;
    qm/erd/erd__2d_atom_coefficients.f;
    qm/erd/erd__set_abcd.f;
    qm/erd/erd__move_ry.f;
    qm/erd/erd__1111_csgto.f;
    qm/oed/oed__cartesian_norms.f;
    qm/oed/oed__ctr_2index_block.f;
    qm/oed/oed__ctr_2index_reorder.f;
    qm/oed/oed__ctr_3index_block.f;
    qm/oed/oed__ctr_3index_reorder.f;
    qm/oed/oed__ctr_pair_new.f;
    qm/oed/oed__ctr_pair_update.f;
    qm/oed/oed__ctr_rs_expand.f;
    qm/oed/oed__ctr_single_new.f;
    qm/oed/oed__ctr_single_update.f;
    qm/oed/oed__dsqmin_line_segments.f;
    qm/oed/oed__ftable.inc;
    qm/oed/oed__gener_kin_batch.f;
    qm/oed/oed__gener_kin_derv_batch.f;
    qm/oed/oed__gener_nai_batch.f;
    qm/oed/oed__gener_nai_derv_batch.f;
    qm/oed/oed__gener_ovl3c_batch.f;
    qm/oed/oed__gener_ovl_batch.f;
    qm/oed/oed__gener_ovl_derv_batch.f;
    qm/oed/oed__gener_xyz_batch.f;
    qm/oed/oed__gener_xyz_derv_batch.f;
    qm/oed/oed__hrr_matrix.f;
    qm/oed/oed__hrr_step.f;
    qm/oed/oed__hrr_transform.f;
    qm/oed/oed__jacobi.inc;
    qm/oed/oed__kin_1d_derv_integrals.f;
    qm/oed/oed__kin_1d_integrals.f;
    qm/oed/oed__kin_ab_def_blocks.f;
    qm/oed/oed__kin_ab_pcgto_block.f;
    qm/oed/oed__kin_csgto.f;
    qm/oed/oed__kin_derv_csgto.f;
    qm/oed/oed__kin_derv_def_blocks.f;
    qm/oed/oed__kin_derv_int1d_to_00.f;
    qm/oed/oed__kin_derv_int1d_to_a0.f;
    qm/oed/oed__kin_derv_int1d_to_ab.f;
    qm/oed/oed__kin_derv_pcgto_block.f;
    qm/oed/oed__kin_int1d_to_a0.f;
    qm/oed/oed__kin_int1d_to_ab.f;
    qm/oed/oed__kin_prepare_ctr.f;
    qm/oed/oed__kin_set_ab.f;
    qm/oed/oed__kin_set_derv_ab.f;
    qm/oed/oed__kin_set_derv_sequence.f;
    qm/oed/oed__kin_set_ij_pairs.f;
    qm/oed/oed__map_ijkl_to_ikjl.f;
    qm/oed/oed__memory_kin_batch.f;
    qm/oed/oed__memory_kin_csgto.f;
    qm/oed/oed__memory_kin_derv_batch.f;
    qm/oed/oed__memory_kin_derv_csgto.f;
    qm/oed/oed__memory_nai_batch.f;
    qm/oed/oed__memory_nai_csgto.f;
    qm/oed/oed__memory_nai_derv_batch.f;
    qm/oed/oed__memory_nai_derv_csgto.f;
    qm/oed/oed__memory_ovl3c_batch.f;
    qm/oed/oed__memory_ovl3c_csgto.f;
    qm/oed/oed__memory_ovl_batch.f;
    qm/oed/oed__memory_ovl_csgto.f;
    qm/oed/oed__memory_ovl_derv_batch.f;
    qm/oed/oed__memory_ovl_derv_csgto.f;
    qm/oed/oed__move_ry.f;
    qm/oed/oed__nai_1d_ab_integrals.f;
    qm/oed/oed__nai_1d_cenderv_integrals.f;
    qm/oed/oed__nai_1d_coefficients.f;
    qm/oed/oed__nai_1d_p_integrals.f;
    qm/oed/oed__nai_1d_shderv_integrals.f;
    qm/oed/oed__nai_csgto.f;
    qm/oed/oed__nai_derv_2cen_pcgto_block.f;
    qm/oed/oed__nai_derv_3cen_pcgto_block.f;
    qm/oed/oed__nai_derv_csgto.f;
    qm/oed/oed__nai_derv_def_blocks.f;
    qm/oed/oed__nai_derv_int1d_to_00.f;
    qm/oed/oed__nai_derv_int1d_to_a0.f;
    qm/oed/oed__nai_derv_int1d_to_ab.f;
    qm/oed/oed__nai_e0_def_blocks.f;
    qm/oed/oed__nai_e0_pcgto_block.f;
    qm/oed/oed__nai_int1d_to_e0.f;
    qm/oed/oed__nai_prepare_ctr.F;
    qm/oed/oed__nai_set_ab.f;
    qm/oed/oed__nai_set_derv_ab.f;
    qm/oed/oed__nai_set_derv_ijc_triples.f;
    qm/oed/oed__nai_set_ijc_triples.f;
    qm/oed/oed__normalize_cartesian.f;
    qm/oed/oed__ovl_1d_ab_integrals.f;
    qm/oed/oed__ovl_1d_derv_integrals.f;
    qm/oed/oed__ovl_1d_integrals.f;
    qm/oed/oed__ovl3c_csgto.f;
    qm/oed/oed__ovl3c_f00_def_blocks.f;
    qm/oed/oed__ovl3c_f00_pcgto_block.f;
    qm/oed/oed__ovl3c_prepare_ctr.F;
    qm/oed/oed__ovl3c_set_abc.f;
    qm/oed/oed__ovl3c_set_ijk.f;
    qm/oed/oed__ovl3c_set_ijk_triples.f;
    qm/oed/oed__ovl_csgto.f;
    qm/oed/oed__ovl_derv_csgto.f;
    qm/oed/oed__ovl_derv_def_blocks.f;
    qm/oed/oed__ovl_derv_int1d_to_00.f;
    qm/oed/oed__ovl_derv_int1d_to_a0.f;
    qm/oed/oed__ovl_derv_int1d_to_ab.f;
    qm/oed/oed__ovl_derv_pcgto_block.f;
    qm/oed/oed__ovl_e0_def_blocks.f;
    qm/oed/oed__ovl_e0_pcgto_block.f;
    qm/oed/oed__ovl_int1d_to_e0.f;
    qm/oed/oed__ovl_prepare_ctr.F;
    qm/oed/oed__ovl_set_ab.f;
    qm/oed/oed__ovl_set_derv_ab.f;
    qm/oed/oed__ovl_set_derv_sequence.f;
    qm/oed/oed__ovl_set_ij_pairs.f;
    qm/oed/oed__print_2ind_batch.f;
    qm/oed/oed__print_batch.f;
    qm/oed/oed__rys_1_roots_weights.f;
    qm/oed/oed__rys_2_roots_weights.f;
    qm/oed/oed__rys_3_roots_weights.f;
    qm/oed/oed__rys_4_roots_weights.f;
    qm/oed/oed__rys_5_roots_weights.f;
    qm/oed/oed__rys_roots_weights.f;
    qm/oed/oed__rys_x_roots_weights.f;
    qm/oed/oed__spherical_transform.f;
    qm/oed/oed__transpose_batch.f;
    qm/oed/oed__tuning.inc;
    qm/oed/oed__xyz_1d_ab_integrals.f;
    qm/oed/oed__xyz_1d_derv_integrals.f;
    qm/oed/oed__xyz_1d_integrals.f;
    qm/oed/oed__xyz_1d_mom_ab_integrals.f;
    qm/oed/oed__xyz_1d_ovl_mom_ab_integrals.f;
    qm/oed/oed__xyz_csgto.f;
    qm/oed/oed__xyz_derv_csgto.f;
    qm/oed/oed__xyz_derv_def_blocks.f;
    qm/oed/oed__xyz_derv_int1d_to_00.f;
    qm/oed/oed__xyz_derv_int1d_to_a0.f;
    qm/oed/oed__xyz_derv_int1d_to_ab.f;
    qm/oed/oed__xyz_derv_pcgto_block.f;
    qm/oed/oed__xyz_e0_def_blocks.f;
    qm/oed/oed__xyz_e0_pcgto_block.f;
    qm/oed/oed__xyz_init_00_ints.f;
    qm/oed/oed__xyz_init_ovrlp.f;
    qm/oed/oed__xyz_int1d_to_e0.f;
    qm/oed/oed__xyz_mom_integrals.f;
    qm/oed/oed__xyz_set_ab.f;
    qm/oed/oed__xyz_set_derv_ab.f;
    qm/oed/oed__xyz_set_derv_sequence.f;
    qm/oed/oed__xyz_to_ry_abc.f;
    qm/oed/oed__xyz_to_ry_ab.f;
    qm/oed/oed__xyz_to_ry_matrix.f;
    qm/ecp/izero.F;
    qm/ecp/dzero.F;
    qm/ecp/a4_ecp_basis_init.F;
    qm/ecp/a4_ecp_init.F;
    qm/ecp/a4_ecp_main.F;
    qm/ecp/a4_ecp_grdint_main.F;
    qm/ecp/a4_ecpgrd_int.F;
    qm/ecp/factorial.F;
    qm/ecp/factorialo.F;
    qm/ecp/factorialo.F;
    qm/ecp/dfactorial.F;
    qm/ecp/make_ztab.F;
    qm/ecp/make_xyz.F;
    qm/ecp/make_ftab.F;
    qm/ecp/binomial_coefs.F;
    qm/ecp/a4_ecp_int_driver.F;
    qm/ecp/a4_ecp_grdint_driver.F;
    qm/ecp/ecp_int_4prim.F;
    qm/ecp/ecp_grdint_4prim.F;
    qm/ecp/get_center.F;
    qm/ecp/ecp_int_typ1.F;
    qm/ecp/ecp_int_typ2.F;
    qm/ecp/ecp_rad_int_typ1.F;
    qm/ecp/ecp_ang_int_typ1.F;
    qm/ecp/radint_recur.F;
    qm/ecp/make_bc_cacb_xyz.F;
    qm/ecp/screen_ang_typ1.F;
    qm/ecp/make_res.F;
    qm/ecp/ang_int.F;
    qm/ecp/ecp_rad_int_typ2.F;
    qm/ecp/ecp_ang_int_typ2.F;
    qm/ecp/sps.F;
    qm/ecp/gpwm.F;
    qm/ecp/bess.F;
    qm/ecp/ecp_ang_int2.F;
    qm/ecp/make_bc_pq_xyz.F;
    qm/ecp/screen_ang_typ2.F;
    qm/ecp/ecp_int_4shell.F;
    qm/ecp/ecp_int.F;
    qm/ecp/ecp_grdint.F;
    qm/ecp/oedecp__xyz_to_ry_ab.F;
    qm/ecp/oedecp__xyz_to_ry_matrix.F;
    qm/ecp/qcomp_38D.F;
    qm/ecp/qcomp_38D_odd.F;
    qm/ecp/qcomp.F;
    qm/ecp/qcomp_sps.F;
    qm/ecp/qpasy.F;
    qm/ecp/transp.F;
    qm/ecp/dcopy.F;
    qm/tests/get_and_print_int_array_dummy.F;
    qm/tests/get_and_print_scalar_array_dummy.F;
    qm/tests/get_scratch_array_dummy.F;
    qm/tests/fill_block_sequential.f;
    qm/tests/fill_block_cyclic.f;
    qm/tests/get_and_print_mpi_rank.F)

# General Super Instructions
set(GENERAL_SOURCE_FILES
    general/list_block_map.cpp;
    general/print_block.cpp;
    general/write_block_to_file.cpp;
    general/read_block_from_file.cpp;
    general/print_static_array.cpp;
    general/get_my_rank.cpp;
    general/swap_blocks.cpp;
    general/disable_debug_print.cpp;
    general/enable_debug_print.cpp;
    general/enable_all_rank_print.cpp;
    general/disable_all_rank_print.cpp;
    general/get_first_block_element.cpp;
    general/read_block_from_text_file.cpp;
    general/abort_job.F;
    general/one_arg_no_op.cpp;
    general/list_blocks_with_number.cpp;
    general/check_block_number_calculation.cpp)


set(SRCS 
    special_instructions.h;
    special_instructions.cpp;
    ${QM_SOURCE_FILES};
    ${GENERAL_SOURCE_FILES})

include_directories(    
    qm;
    qm/erd;
    qm/oed;
    qm/ecp;
    qm/direct_integral;
    ${CMAKE_SOURCE_DIR}/src/sip;
    ${CMAKE_SOURCE_DIR}/src/sip/tensor_algebra;
    ${CMAKE_SOURCE_DIR}/src/sip/core;
    ${CMAKE_SOURCE_DIR}/src/sip/setup;
    ${CMAKE_SOURCE_DIR}/src/sip/worker;
    ${CMAKE_SOURCE_DIR}/src/sip/static_data;
    ${CMAKE_SOURCE_DIR}/src/sip/dynamic_data;
    ${CMAKE_SOURCE_DIR}/src/sip/mpi;
    ${CMAKE_SOURCE_DIR}/src/sip/cuda)

add_library(superinstructions ${SRCS})


